--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
           <div
             class="profile__image"
             style="background-image: url(<%=require('./images/avatar.jpg')%>)"
-          ></div>
+          >
+            <div class="edit-icon"></div>
+          </div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button" type="button"></button>
@@ -47,7 +49,7 @@
               <input
                 id="name-input"
                 type="text"
-                pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$" 
+                pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
                 data-error-message="Разрешены только только латинские и кириллические буквы, знаки дефиса и пробелы"
                 name="name"
                 class="popup__input popup__input_type_name"
@@ -88,7 +90,7 @@
               <input
                 id="place-name-input"
                 type="text"
-                pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$" 
+                pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
                 data-error-message="Разрешены только только латинские и кириллические буквы, знаки дефиса и пробелы"
                 name="place-name"
                 class="popup__input popup__input_type_card-name"
@@ -116,6 +118,30 @@
           </form>
         </div>
       </div>
+
+      <div class="popup popup_type_update-avatar">
+        <div class="popup__content">
+          <button type="button" class="popup__close"></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <form class="popup__form" name="update-avatar">
+            <label class="form__field">
+              <input
+                id="avatar-link-input"
+                type="url"
+                name="avatar-link"
+                class="popup__input popup__input_type_url"
+                placeholder="Ссылка на картинку"
+                required
+              />
+              <span class="avatar-link-input-error popup__input-error"></span>
+            </label>
+            <button type="submit" class="button popup__button">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
+
       <div class="popup popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button type="button" class="popup__close"></button>
@@ -125,12 +151,15 @@
       </div>
     </div>
     <template id="card-template">
-      <li class="places__item card">
+      <li class="places__item card" data-id="">
         <img class="card__image" src="" alt="" />
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+          <div class="card__like-container">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__like-count">1</span>
+          </div>
         </div>
       </li>
     </template>
