Больше не используется атрибут data-id, id карточки передается в параметрах всем обработчикам

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
       </div>
     </div>
     <template id="card-template">
-      <li class="places__item card" data-id="">
+      <li class="places__item card">
         <img class="card__image" src="" alt="" />
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
